<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperprincipal"
    tools:context=".Main2Activity_Nivel_1">

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="13dp"
        android:text="@string/jugador_nombre"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="46dp"
        android:text="@string/total_score"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_Manzanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:text="@string/et_vidas"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView_vidas"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="80dp"
        android:layout_toEndOf="@+id/textView_Manzanas"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/imageView_num1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imageView_num2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imageView_signo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="150dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/adicion" />

    <EditText
        android:id="@+id/editText_resultado"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="283dp"
        android:autofillHints="none"
        android:ems="10"
        android:hint="@string/et_respeuesta"
        android:inputType="number" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignStart="@+id/editText_resultado"
        android:layout_alignBottom="@+id/editText_resultado"
        android:layout_marginStart="113dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/fondoboton"
        android:onClick="Comprobar"
        android:text="@string/boton_sumar"
        android:textColor="@android:color/background_light" />

</RelativeLayout>