<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView_personaje"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="88dp"
        android:contentDescription="@string/imgViewDescp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/manzana" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="190dp"
        android:autofillHints="None"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_personaje" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/txt_nombre"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="-64dp"
        android:background="@drawable/fondoboton"
        android:onClick="Jugar"
        android:text="@string/boton"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

    <TextView
        android:id="@+id/textView_BestScore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="38dp"
        android:background="@drawable/fondoet"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_editor_absoluteX="0dp" />

</RelativeLayout>